--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
       <artifactId>joda-time</artifactId>
       <version>2.10</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-joda</artifactId>
+      <version>2.9.6</version>
+    </dependency>
   </dependencies>
 
   <build>
