--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
   profiles: production
   datasource:
     username: diary_db
-    password: MaV36YnUGhQezblC
+    password: Czhk4oZA7IGatlG7
 server:
   port: 8080
   context-path: /diary
