--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   profiles:
     active: production
   application:
-    name: apigo
+    name: diary
   datasource:
     url: jdbc:mysql://localhost:3306/diary_db?characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
