Major diary vuex module improvements.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,8 @@ spring:
             mode: none
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+  jmx:
+    enabled: false
 security:
   oauth2:
     resource:
