--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "debounce": "^1.2.0",
     "font-awesome": "^4.7.0",
     "gravatar": "^1.6.0",
+    "linearicons": "^1.0.1",
     "luxon": "^1.2.1",
     "showdown": "^1.8.6",
     "velocity-animate": "^1.5.1",
     "vue": "^2.5.16",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "weather-icons": "^1.3.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.11",
