--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "rimraf src/main/resources/static &&  vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build:core": "",
-    "build:modules": "vue-cli-service build --target lib --name diary-core ./src/main/vuejs/modules/toasts/index.vue"
+    "build:core": "vue-cli-service build --target lib --name diary-core ./src/main/vuejs/main.js",
+    "build:modules": "vue-cli-service build --target lib --name diary-core ./src/main/vuejs/modules/index.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
