set private false.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp-core-frontend",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "rimraf src/main/resources/static &&  vue-cli-service build",
