--- a/package.json
+++ b/package.json
@@ -5,24 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "rimraf src/main/resources/static &&  vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "build:modules": "vue-cli-service build --target lib --name diary-core ./src/main/vuejs/modules/index.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.1",
     "debounce": "^1.2.0",
-    "font-awesome": "^4.7.0",
-    "gravatar": "^1.6.0",
-    "linearicons": "^1.0.1",
+    "diary-core": "^0.1.7",
     "luxon": "^1.2.1",
-    "showdown": "^1.8.6",
     "velocity-animate": "^1.5.1",
     "vue": "^2.5.16",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "weather-icons": "^1.3.2"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.11",
