--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,15 @@
       <artifactId>jackson-datatype-joda</artifactId>
       <version>2.9.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-websocket</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-messaging</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
