--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.1.1",
     "debounce": "^1.2.0",
     "diary-core": "^0.2.23",
+    "html5-device-mockups": "^3.2.1",
     "luxon": "^1.2.1",
     "velocity-animate": "^1.5.1",
     "vue": "^2.5.16",
