--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
   <groupId>com.pancisin</groupId>
   <artifactId>diary</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
 
   <name>diary</name>
   <description>Diary project</description>
@@ -23,7 +22,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
     <kotlin.version>1.2.61</kotlin.version>
-    <start-class>com.pancisin.webappcore.DiaryApplication</start-class>
+    <start-class>com.pancisin.webappcore.DiaryApplicationKt</start-class>
   </properties>
 
   <dependencies>
@@ -153,46 +152,6 @@
           <jvmTarget>1.8</jvmTarget>
         </configuration>
       </plugin>
-
-      <plugin>
-        <groupId>com.github.eirslett</groupId>
-        <artifactId>frontend-maven-plugin</artifactId>
-        <version>0.0.27</version>
-
-        <executions>
-          <execution>
-            <id>install node and npm</id>
-            <goals>
-              <goal>install-node-and-npm</goal>
-            </goals>
-            <configuration>
-              <nodeVersion>v8.10.0</nodeVersion>
-              <npmVersion>5.6.0</npmVersion>
-            </configuration>
-          </execution>
-
-          <execution>
-            <id>npm install</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <configuration>
-              <arguments>install</arguments>
-            </configuration>
-          </execution>
-
-          <execution>
-            <id>npm run build</id>
-            <goals>
-              <goal>npm</goal>
-            </goals>
-            <configuration>
-              <arguments>run build</arguments>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
