Added reverse proxyto nginx web server and bugfixes.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,5 +35,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    depends_on:
+      - backend
     ports:
       - "3000:80"
+    links:
+      - backend
