--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,26 @@
 volumes:
-  mysql-data:
+  postgres_data:
     driver: local
 services:
   db:
-    image: mysql
+    image: postgres
     restart: always
+    shm_size: 128mb
     environment:
-      MYSQL_DATABASE: "diary_db"
-      MYSQL_USER: "diary_db"
-      MYSQL_PASSWORD: "Czhk4oZA7IGatlG7"
-      MYSQL_ROOT_PASSWORD: "password"
-    ports:
-      - "3306:3306"
-    expose:
-      - "3306"
+      POSTGRES_DB: diary_db
+      POSTGRES_USER: diary_db
+      POSTGRES_PASSWORD: Czhk4oZA7IGatlG7
     volumes:
-      - mysql-data:/var/lib/mysql
+      - postgres_data:/var/lib/postgresql/data
   backend:
     build:
       context: .
       dockerfile: Dockerfile.spring
     depends_on:
       - db
-    ports:
-      - "8080:8080"
     environment:
       - PORT=8080
-      - DB_URL=jdbc:mysql://db:3306/diary_db?characterEncoding=UTF-8&useSSL=false&allowPublicKeyRetrieval=true
+      - DB_URL=jdbc:postgresql://db:5432/diary_db
       - DB_USERNAME=diary_db
       - DB_PASSWORD=Czhk4oZA7IGatlG7
     links:
