--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,8 @@ spring:
   application:
     name: diary
   datasource:
-    url: jdbc:mysql://localhost:3306/diary_db?characterEncoding=UTF-8
-    driver-class-name: com.mysql.jdbc.Driver
+    # url: jdbc:mysql://localhost:3306/diary_db?characterEncoding=UTF-8
+    # driver-class-name: com.mysql.jdbc.Driver
     sql-script-encoding: UTF-8
   jpa:
     hibernate:
@@ -20,7 +20,7 @@ spring:
           validation:
             mode: none
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
   jmx:
     enabled: false
 security:
