fix: resolve problems with nginx configuration

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
  
     server {
         listen 80;
+        include /etc/nginx/mime.types;
+        sendfile on;
  
         location ~ ^/(api|oauth) {
             limit_req zone=ip burst=12 delay=8;
@@ -34,8 +36,9 @@ http {
         }
 
         location / {
-            root               /usr/share/nginx/html;
-            try_files $uri /index.html;
+            root                /usr/share/nginx/html;
+            index               index.html;
+            try_files           $uri /index.html;
         }
     }
 }
